force-app/main/default/objects/Termination__c/Termination__c.object-meta.xml
<CustomObject>
    <label>Rescisão</label>
    <nameField>
        <label>Número da Rescisão</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rescisões</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>