force-app/main/default/objects/Termination__c/fields/AdminTermination__c.field-meta.xml
<CustomField>
    <fullName>AdminTermination__c</fullName>
    <label>Rescisão Administrativa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>