force-app/main/default/objects/Termination__c/fields/AgreementAndImprovements__c.field-meta.xml
<CustomField>
    <fullName>AgreementAndImprovements__c</fullName>
    <label>Há acordo e benfeitorias?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>