force-app/main/default/objects/Termination__c/fields/AllRepairsExemptedByOwner__c.field-meta.xml
<CustomField>
    <fullName>AllRepairsExemptedByOwner__c</fullName>
    <label>Todos Reparos Isentos pelo PP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>