force-app/main/default/objects/Termination__c/fields/AutomaticRepairAnalsysis__c.field-meta.xml
<CustomField>
    <fullName>AutomaticRepairAnalsysis__c</fullName>
    <label>Análise de Reparo Automática</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>