force-app/main/default/objects/Termination__c/fields/BeforeRental__c.field-meta.xml
<CustomField>
    <fullName>BeforeRental__c</fullName>
    <label>Antes da Locação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>