force-app/main/default/objects/Termination__c/fields/BudgetApprovalResponseIQ__c.field-meta.xml
<CustomField>
    <fullName>BudgetApprovalResponseIQ__c</fullName>
    <label>Resposta do Budget Approval IQ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprovou</fullName>
            </value>
            <value>
                <fullName>Não aprovou</fullName>
            </value>
            <value>
                <fullName>Não respondeu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>