force-app/main/default/objects/Termination__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Rescisões</relationshipLabel>
    <relationshipName>Rescisoes</relationshipName>
    <type>Lookup</type>
</CustomField>