force-app/main/default/objects/Termination__c/fields/ConsumptionProofSubmissionIQ__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionProofSubmissionIQ__c</fullName>
    <label>Envio de comprovantes de contas de Consu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>