force-app/main/default/objects/Termination__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Rescisões</relationshipLabel>
    <relationshipName>Rescisoes</relationshipName>
    <type>Lookup</type>
</CustomField>