force-app/main/default/objects/Termination__c/fields/DescriptionAgreementAndImprovements__c.field-meta.xml
<CustomField>
    <fullName>DescriptionAgreementAndImprovements__c</fullName>
    <label>Descrição de acordos e benfeitorias</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>