force-app/main/default/objects/Termination__c/fields/Eviction__c.field-meta.xml
<CustomField>
    <fullName>Eviction__c</fullName>
    <label>Despejo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>