force-app/main/default/objects/Termination__c/fields/FeedItemComment__c.field-meta.xml
<CustomField>
    <fullName>FeedItemComment__c</fullName>
    <label>Comentários para o Feed do Caso</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>