force-app/main/default/objects/Termination__c/fields/FinishDate__c.field-meta.xml
<CustomField>
    <fullName>FinishDate__c</fullName>
    <label>Data de Conclusão</label>
    <type>DateTime</type>
</CustomField>