force-app/main/default/objects/Termination__c/fields/HasBudgetApproval__c.field-meta.xml
<CustomField>
    <fullName>HasBudgetApproval__c</fullName>
    <label>Aprovação Orçamentária</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>