force-app/main/default/objects/Termination__c/fields/HasContestationSolved__c.field-meta.xml
<CustomField>
    <fullName>HasContestationSolved__c</fullName>
    <description>If there&apos;s no CONTESTATION_REVIEW_NEEDED_5A checklist, it is null. Else it is filled with the checklist Done__c field.</description>
    <inlineHelpText>If there&apos;s no CONTESTATION_REVIEW_NEEDED_5A checklist, it is null. Else it is filled with the checklist Done__c field.</inlineHelpText>
    <label>Has Contestation Solved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>