force-app/main/default/objects/Termination__c/fields/HasOwnerReview__c.field-meta.xml
<CustomField>
    <fullName>HasOwnerReview__c</fullName>
    <label>Há revisão do proprietário?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>