force-app/main/default/objects/Termination__c/fields/HasTenantReview__c.field-meta.xml
<CustomField>
    <fullName>HasTenantReview__c</fullName>
    <label>Há revisão do inquilino?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>