force-app/main/default/objects/Termination__c/fields/HighValueContract__c.field-meta.xml
<CustomField>
    <fullName>HighValueContract__c</fullName>
    <label>Contrato de Alto Valor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>