force-app/main/default/objects/Termination__c/fields/Inspection__c.field-meta.xml
<CustomField>
    <fullName>Inspection__c</fullName>
    <label>id_inspection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>