force-app/main/default/objects/Termination__c/fields/InspectionDate__c.field-meta.xml
<CustomField>
    <fullName>InspectionDate__c</fullName>
    <label>Data da Vistoria</label>
    <type>Date</type>
</CustomField>