force-app/main/default/objects/Termination__c/fields/InspectionOptedOut__c.field-meta.xml
<CustomField>
    <fullName>InspectionOptedOut__c</fullName>
    <label>Inspeção Dispensada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>