force-app/main/default/objects/Termination__c/fields/InspectionRequired__c.field-meta.xml
<CustomField>
    <fullName>InspectionRequired__c</fullName>
    <label>Inspeção Obrigatória</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>