force-app/main/default/objects/Termination__c/fields/IntermediationRequired__c.field-meta.xml
<CustomField>
    <fullName>IntermediationRequired__c</fullName>
    <label>Intermediação Necessária</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>