force-app/main/default/objects/Termination__c/fields/InternalAdministration__c.field-meta.xml
<CustomField>
    <fullName>InternalAdministration__c</fullName>
    <label>Administração Interna</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>