force-app/main/default/objects/Termination__c/fields/IsSpoc__c.field-meta.xml
<CustomField>
    <fullName>IsSpoc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SPOC</label>
    <type>Checkbox</type>
</CustomField>