force-app/main/default/objects/Termination__c/fields/IsValidLetter__c.field-meta.xml
<CustomField>
    <fullName>IsValidLetter__c</fullName>
    <label>Carta é Válida?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ValidLetterValues</valueSetName>
    </valueSet>
</CustomField>