force-app/main/default/objects/Termination__c/fields/JobTransfer__c.field-meta.xml
<CustomField>
    <fullName>JobTransfer__c</fullName>
    <label>Transferência de Trabalho</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>