force-app/main/default/objects/Termination__c/fields/LandlordSelling__c.field-meta.xml
<CustomField>
    <fullName>LandlordSelling__c</fullName>
    <label>Venda pelo Proprietário</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>