force-app/main/default/objects/Termination__c/fields/LeadTime__c.field-meta.xml
<CustomField>
    <fullName>LeadTime__c</fullName>
    <formula>IF(
  ISBLANK( TerminationFinished__c ),
  0,
  TerminationFinished__c - DATEVALUE(CreatedDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>