force-app/main/default/objects/Termination__c/fields/NoticeDue__c.field-meta.xml
<CustomField>
    <fullName>NoticeDue__c</fullName>
    <label>Cumpriu o aviso prévio?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>