force-app/main/default/objects/Termination__c/fields/OwnerAgreedBudgetApprovalReview__c.field-meta.xml
<CustomField>
    <fullName>OwnerAgreedBudgetApprovalReview__c</fullName>
    <label>PP Concordou Revisão do Budget Approval?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>