force-app/main/default/objects/Termination__c/fields/PostTDLeadtime__c.field-meta.xml
<CustomField>
    <fullName>PostTDLeadtime__c</fullName>
    <formula>IF(TODAY() &gt;= VacancyDate__c, TODAY() - VacancyDate__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead time pós TD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>