force-app/main/default/objects/Termination__c/fields/PreTDLeadtime__c.field-meta.xml
<CustomField>
    <fullName>PreTDLeadtime__c</fullName>
    <formula>IF(VacancyDate__c &gt;= TODAY(), VacancyDate__c - TODAY(), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead time pré TD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>