force-app/main/default/objects/Termination__c/fields/ProOwner__c.field-meta.xml
<CustomField>
    <fullName>ProOwner__c</fullName>
    <label>Proprietário Profissional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>