force-app/main/default/objects/Termination__c/fields/PropertyId__c.field-meta.xml
<CustomField>
    <fullName>PropertyId__c</fullName>
    <label>Id do Imóvel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>