force-app/main/default/objects/Termination__c/fields/RelatedContract__c.field-meta.xml
<CustomField>
    <fullName>RelatedContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato Relacionado</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Rescisões</relationshipLabel>
    <relationshipName>Rescisoes</relationshipName>
    <type>Lookup</type>
</CustomField>