force-app/main/default/objects/Termination__c/fields/RelistingEnabled__c.field-meta.xml
<CustomField>
    <fullName>RelistingEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relistagem Disponível</label>
    <type>Checkbox</type>
</CustomField>