force-app/main/default/objects/Termination__c/fields/RepairsChargedARorPP__c.field-meta.xml
<CustomField>
    <fullName>RepairsChargedARorPP__c</fullName>
    <label>Reparos cobrados? em AR ou por PP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>