force-app/main/default/objects/Termination__c/fields/RepairsChargedPP__c.field-meta.xml
<CustomField>
    <fullName>RepairsChargedPP__c</fullName>
    <label>Presença de Reparos Cobrados em AR ou PP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>