force-app/main/default/objects/Termination__c/fields/RepairsChargedToTenant__c.field-meta.xml
<CustomField>
    <fullName>RepairsChargedToTenant__c</fullName>
    <label>Reparos Cobrados do Inquilino</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>