force-app/main/default/objects/Termination__c/fields/RepairsContestedByTenant__c.field-meta.xml
<CustomField>
    <fullName>RepairsContestedByTenant__c</fullName>
    <label>Reparos Contestados pelo Inquilino</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>