force-app/main/default/objects/Termination__c/fields/RepairsDetectedByOwner__c.field-meta.xml
<CustomField>
    <fullName>RepairsDetectedByOwner__c</fullName>
    <label>Reparos Detectados pelo Proprietário</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>