force-app/main/default/objects/Termination__c/fields/RepairsDetectedInternally__c.field-meta.xml
<CustomField>
    <fullName>RepairsDetectedInternally__c</fullName>
    <label>Reparos Detectados Internamente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>