force-app/main/default/objects/Termination__c/fields/RequestedBy__c.field-meta.xml
<CustomField>
    <fullName>RequestedBy__c</fullName>
    <label>Solicitado por</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LANDLORD</fullName>
                <label>Proprietário</label>
            </value>
            <value>
                <fullName>TENANT</fullName>
                <label>Inquilino</label>
            </value>
            <value>
                <fullName>QUINTOANDAR</fullName>
                <label>Quinto Andar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>