force-app/main/default/objects/Termination__c/fields/ReslistingEnabled__c.field-meta.xml
<CustomField>
    <fullName>ReslistingEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relistagem Disponível</label>
    <type>Checkbox</type>
</CustomField>