force-app/main/default/objects/Termination__c/fields/ResponsibleOffManager__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleOffManager__c</fullName>
    <label>Off Manager Responsável pelo Caso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>