force-app/main/default/objects/Termination__c/fields/SuccesContactIQ__c.field-meta.xml
<CustomField>
    <fullName>SuccesContactIQ__c</fullName>
    <label>Contato com IQ Teve Sucesso?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>