force-app/main/default/objects/Termination__c/fields/SuccesContactPP__c.field-meta.xml
<CustomField>
    <fullName>SuccesContactPP__c</fullName>
    <label>Contato com PP Teve Sucesso?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>