force-app/main/default/objects/Termination__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Time</label>
    <type>TextArea</type>
</CustomField>