force-app/main/default/objects/Termination__c/fields/TenantAnsweredBudgetApprovalReview__c.field-meta.xml
<CustomField>
    <fullName>TenantAnsweredBudgetApprovalReview__c</fullName>
    <label>IQ Respondeu Revisão do Budget Approval?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>