force-app/main/default/objects/Termination__c/fields/TenantCondominiumPayer__c.field-meta.xml
<CustomField>
    <fullName>TenantCondominiumPayer__c</fullName>
    <label>Inquilino Pagador do Condomínio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>