force-app/main/default/objects/Termination__c/fields/TerminationDateSync__c.field-meta.xml
<CustomField>
    <fullName>TerminationDateSync__c</fullName>
    <label>Termination Date (TD) - realizado / sync</label>
    <type>Date</type>
</CustomField>