force-app/main/default/objects/Termination__c/fields/TerminationFinished__c.field-meta.xml
<CustomField>
    <fullName>TerminationFinished__c</fullName>
    <label>Termination Finished (TF)</label>
    <type>Date</type>
</CustomField>