force-app/main/default/objects/Termination__c/fields/TerminationFlowType__c.field-meta.xml
<CustomField>
    <fullName>TerminationFlowType__c</fullName>
    <label>Tipo da rescisão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FlowSubType</valueSetName>
    </valueSet>
</CustomField>