force-app/main/default/objects/Termination__c/fields/TerminationInFirstYear__c.field-meta.xml
<CustomField>
    <fullName>TerminationInFirstYear__c</fullName>
    <label>Rescisão no Primeiro Ano</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>