force-app/main/default/objects/Termination__c/fields/TerminationStatus__c.field-meta.xml
<CustomField>
    <fullName>TerminationStatus__c</fullName>
    <label>Status da rescisão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REQUESTED</fullName>
                <label>Solicitada</label>
            </value>
            <value>
                <fullName>DONE</fullName>
                <label>Finalizada</label>
            </value>
            <value>
                <fullName>CANCELED</fullName>
                <label>Cancelada</label>
            </value>
            <value>
                <fullName>INSPECTION_SCHEDULED</fullName>
                <label>Inspeção Agendada</label>
            </value>
            <value>
                <fullName>INSPECTION_CANCELED</fullName>
                <label>Inspeção Cancelada</label>
            </value>
            <value>
                <fullName>INSPECTION_UNDER_REVIEW</fullName>
                <label>Inspeção em Análise</label>
            </value>
            <value>
                <fullName>INSPECTION_OPTED_OUT</fullName>
                <label>Inspeção Dispensada</label>
            </value>
            <value>
                <fullName>WAITING_INSPECTION_SCHEDULE</fullName>
                <label>Aguardando Agendamento da Inspeção</label>
            </value>
            <value>
                <fullName>WAITING_KEYS_LOCATION</fullName>
                <label>Aguardando Localização das Chaves</label>
            </value>
            <value>
                <fullName>INSPECTION_EXECUTED</fullName>
                <label>Inspeção Realizada</label>
            </value>
            <value>
                <fullName>WAITING_REPAIRS_FOLLOW_UP</fullName>
                <label>Aguardando Acompanhamento dos Reparos</label>
            </value>
            <value>
                <fullName>FINISHED</fullName>
                <isActive>false</isActive>
                <label>FINISHED</label>
            </value>
            <value>
                <fullName>IN PROGRESS</fullName>
                <isActive>false</isActive>
                <label>IN PROGRESS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>