force-app/main/default/objects/Termination__c/fields/TerminationUrl__c.field-meta.xml
<CustomField>
    <fullName>TerminationUrl__c</fullName>
    <formula>IF(
NOT(ISBLANK(  Contract__r.ExternalId__c  )),
&quot;http://crm-pwa-imoveis.quintoandar.com.br/contratos/&quot; + Contract__r.ExternalId__c + &quot;/finalizacao&quot;,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Página de Rescisão no ML</label>
    <type>Text</type>
</CustomField>