force-app/main/default/objects/Termination__c/fields/TerminationWithPenalty__c.field-meta.xml
<CustomField>
    <fullName>TerminationWithPenalty__c</fullName>
    <label>Rescisão com Multa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>