force-app/main/default/objects/Termination__c/fields/TRDate__c.field-meta.xml
<CustomField>
    <fullName>TRDate__c</fullName>
    <label>TR - Data de Criação da Rescisão</label>
    <type>Date</type>
</CustomField>