force-app/main/default/objects/Termination__c/fields/TRDateDif__c.field-meta.xml
<CustomField>
    <fullName>TRDateDif__c</fullName>
    <formula>IF(

TRDate__c &lt; DATEVALUE( CreatedDate ),
true,
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TRDateDif</label>
    <type>Checkbox</type>
</CustomField>