force-app/main/default/objects/Termination__c/fields/TRFormula__c.field-meta.xml
<CustomField>
    <fullName>TRFormula__c</fullName>
    <formula>IF( 
TRDate__c = null, 
TRTerminationCreatedDate__c , 
TRDate__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de TR - Criação da Rescisão</label>
    <type>Date</type>
</CustomField>