force-app/main/default/objects/Termination__c/fields/TRTerminationCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>TRTerminationCreatedDate__c</fullName>
    <label>Data de Criação da Rescisão</label>
    <type>Date</type>
</CustomField>