force-app/main/default/objects/Termination__c/fields/VacancyDate__c.field-meta.xml
<CustomField>
    <fullName>VacancyDate__c</fullName>
    <label>Data de Desocupação</label>
    <type>Date</type>
</CustomField>