force-app/main/default/objects/Termination__c/fields/ValidLetter__c.field-meta.xml
<CustomField>
    <fullName>ValidLetter__c</fullName>
    <label>Carta é Válida?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>