force-app/main/default/objects/Termination__c/validationRules/RequiredContract.validationRule-meta.xml
<ValidationRule>
    <fullName>RequiredContract</fullName>
    <active>true</active>
    <description>Contract__c is mandatory</description>
    <errorConditionFormula>ISBLANK(Contract__c)</errorConditionFormula>
    <errorMessage>Error: Contract__c is blank</errorMessage>
</ValidationRule>