force-app/main/default/objects/Termination__c/validationRules/RequiredResponsibleOffManager.validationRule-meta.xml
<ValidationRule>
    <fullName>RequiredResponsibleOffManager</fullName>
    <active>true</active>
    <description>ResponsibleOffManager__c is mandatory</description>
    <errorConditionFormula>AND(IsSpoc__c, ISBLANK(ResponsibleOffManager__c))</errorConditionFormula>
    <errorMessage>Error: ResponsibleOffManager__c is blank</errorMessage>
</ValidationRule>