force-app/main/default/objects/Termination__c/validationRules/RequiredTRDate.validationRule-meta.xml
<ValidationRule>
    <fullName>RequiredTRDate</fullName>
    <active>true</active>
    <description>TRDate__c is mandatory</description>
    <errorConditionFormula>ISBLANK(TRDate__c)</errorConditionFormula>
    <errorMessage>Error: TRDate__c is blank</errorMessage>
</ValidationRule>