force-app/main/default/objects/Termination__c/validationRules/RequiredVacancyDate.validationRule-meta.xml
<ValidationRule>
    <fullName>RequiredVacancyDate</fullName>
    <active>true</active>
    <description>VacancyDate__c is mandatory</description>
    <errorConditionFormula>ISBLANK(VacancyDate__c)</errorConditionFormula>
    <errorMessage>Error: VacancyDate__c is blank</errorMessage>
</ValidationRule>