force-app/main/default/objects/Termination__c/listViews/RetentionQueue_Termination.listView-meta.xml
<ListView>
    <fullName>RetentionQueue_Termination</fullName>
    <filterScope>Queue</filterScope>
    <label>Fila de retenção</label>
    <queue>RetentionQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>